# python-demo

./: .gitignore  1.py  2.py  environment.yml  pyproject.toml  readme.md  requirements.txt  server.py  test.py
algorithm/: kmeans.py  knn.py  linearRegression.py  logisticRegression.py  randomForest.py  readme.md  svm.py  tree.py
flask/: access_req_data.py  api.py  cookies.py  file_uploads.py  handle_errors.py  handle_errors_api.py  hello.py  http_method.py  log.py  message_flash.py  readme.md  redirects_and_errors.py  render_tem.py  responses.py  sessions.py  static_files.py  url_build.py  url_route.py  url_unique.py  url_variable.py
flask/flask-tutorial/: readme.md
flask/flask-tutorial/flaskr/: __init__.py  auth.py  blog.py  schema.sql
flask/templates/: 500.html  500_generic.html  layout.html  login.html  login_simple.html  page_not_found.html  profile.html
lesson/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  data.txt  data2.txt  request.py  single-server.py  test.py
pytorch/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  events.out.tfevents.1731399084.DESKTOP-915H1I1.34476.0_test_tensorboard  helpers.py  readme.md
pytorch/covid-19-dataset-3/: dataset-meta-data.csv
pytorch/runs/Nov12_18-16-48_DESKTOP-915H1I1add_scalar/: events.out.tfevents.1731406608.DESKTOP-915H1I1.25664.0_test_tensorboard
pytorch/yolo/: yolo11.py
tensorflow/: demo.py  lesson1.py  lesson2.py  lesson3.py
utils/: __init__.py  file.py
utils1/: __init__.py  file.py  reduce.py
(+12 files in other folders)
